--- a/source/VizGurka/Resources/Pages.IndexModel.en-GB.resx
+++ b/source/VizGurka/Resources/Pages.IndexModel.en-GB.resx
@@ -122,11 +122,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0,
       Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="title_box_title" xml:space="preserve">
+  <data name="Välkommen till Vizgurka!" xml:space="preserve">
     <value>Welcome to Vizgurka!</value>
     <comment/>
   </data>
-  <data name="test_choice_box_title" xml:space="preserve">
+  <data name="Vänligen välj en produkt att inspektera" xml:space="preserve">
     <value>Please choose which product to review</value>
     <comment/>
   </data>
