Redesigned presentation of features. Add scenario cards, add background title and styling. moved tags and counters.

--- a/source/VizGurka/Resources/Pages.Features.FeaturesModel.sv-SE.resx
+++ b/source/VizGurka/Resources/Pages.Features.FeaturesModel.sv-SE.resx
@@ -185,4 +185,7 @@
   <data name="Failed" xml:space="preserve">
         <value>Misslyckade</value>
     </data>
+  <data name="Background:" xml:space="preserve">
+    <value>Bakgrund:</value>
+  </data>
 </root>
