--- a/source/VizGurka/Resources/Pages.Features.FeaturesModel.sv-SE.resx
+++ b/source/VizGurka/Resources/Pages.Features.FeaturesModel.sv-SE.resx
@@ -146,8 +146,7 @@
     <comment/>
   </data>
   <data name="Table of Contents" xml:space="preserve">
-    <value>Innehållsförteckning</value>
-    <comment/>
+    <value>Scenarier - Översikt</value>
   </data>
   <data name="Background" xml:space="preserve">
         <value>Bakgrund</value>
