add a backgorund dropdown to each scenario card

--- a/source/VizGurka/Resources/Pages.Features.FeaturesModel.sv-SE.resx
+++ b/source/VizGurka/Resources/Pages.Features.FeaturesModel.sv-SE.resx
@@ -187,4 +187,7 @@
   <data name="Background:" xml:space="preserve">
     <value>Bakgrund:</value>
   </data>
+  <data name="Show background" xml:space="preserve">
+    <value>Visa bakgrund</value>
+  </data>
 </root>
