--- a/source/VizGurka/Resources/Pages.Search.SearchModel.sv-SE.resx
+++ b/source/VizGurka/Resources/Pages.Search.SearchModel.sv-SE.resx
@@ -150,4 +150,13 @@
     <value>Taggar</value>
     <comment/>
   </data>
+  <data name="Filter by" xml:space="preserve">
+    <value>Sortera</value>
+  </data>
+  <data name="Feature" xml:space="preserve">
+    <value>Egenskap</value>
+  </data>
+  <data name="Rule" xml:space="preserve">
+    <value>Regel</value>
+  </data>
 </root>
