feat: Special tag handling (#86)
* add draft icon

add bool to check if scenario rule or feature is draft

* Add filtering for draft features.

Add Status logic explanation in the README.md

--- a/source/VizGurka/Resources/Pages.Features.FeaturesModel.sv-SE.resx
+++ b/source/VizGurka/Resources/Pages.Features.FeaturesModel.sv-SE.resx
@@ -199,6 +199,9 @@
   <data name="Duration" xml:space="preserve">
     <value>Tid</value>
   </data>
+  <data name="Draft" xml:space="preserve">
+    <value>Utkast</value>
+  </data>
   <data name="Feature Name" xml:space="preserve">
     <value>Egenskaper</value>
   </data>
